fixed the background not covering issue

--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,8 @@
 
 body {
 	background: url(bg.png) center center fixed no-repeat;
-	background-color: #d9dcd6;
+	background-color: black;
+	background-size: cover;
 	color: black;
 	height: 100dvh;
 	display: flex;
